# LLM-Email-Agent

./: .gitignore  README.md  config.cfg  pyproject.toml
app/: database.py  graph.py  main.py
app/chat/: llama_reader.py
app/database/: database.py  emails.db
app/email/: graph.py  main.py
email/: graph.py  main.py
